--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Blogify_App"]
     path = Blogify_App
-    url = <https://github.com/Nithin18-SEO/Blogify-App>
+    url = <github.com/Nithin18-SEO/Blogify-App>
